--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(CYFEST C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(CYFEST main.c)
+add_executable(CYFEST include/main.c
+        include/salle.c
+        include/salle.h
+        include/fonx.c
+        include/fonx.h)
